--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -113,6 +113,7 @@
     "@superset-ui/plugin-chart-table": "file:./plugins/plugin-chart-table",
     "@superset-ui/plugin-chart-word-cloud": "file:./plugins/plugin-chart-word-cloud",
     "@superset-ui/switchboard": "file:./packages/superset-ui-switchboard",
+    "@superset-ui/plugin-legend": "^0.0.0",
     "@types/d3-format": "^3.0.1",
     "@visx/axis": "^3.0.1",
     "@visx/grid": "^3.0.1",
